[package]
name = "locate"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
regex = "1"
is_executable = "1.0.1"
itertools = "0.10.1"

[dependencies.clap]
version = "3.0.0-beta.4"
default-features = false

# Cherry-pick the features you'd like to use
features = ["std", "suggestions", "color"]


